2005-09-10  Eli Zaretskii  <eliz@gnu.org>

	* buffer.c (init_buffer): Fix error message for failed call to
	get_current_dir_name.
	(get_current_dir_name): Remove prototype.

	* xsmfns.c: (get_current_dir_name): Remove prototype.

	* lisp.h: (get_current_dir_name) [!HAVE_GET_CURRENT_DIR_NAME]: Add
	prototype.

	* sysdep.c [WINDOWSNT]: Add prototype for getwd.
	Don't #undef NULL after including blockinput.h.

	* config.in: Regenerated.

2005-09-10  Giuseppe Scrivano  <gscrivano@gmail.com>

	Remove the MAXPATHLEN limitations:

	* sysdep.c (get_current_dir_name) [!HAVE_GET_CURRENT_DIR_NAME]:
	New function.

	* buffer.c (init_buffer): Use it.

	* xsmfns.c (smc_save_yourself_CB): Ditto.

2005-09-09  Kim F. Storm  <storm@cua.dk>

	* doc.c (Fsubstitute_command_keys): Lookup key binding for
	commands that are remapped from some other command.

	* xdisp.c (try_window_reusing_current_matrix): Clear mode_line_p
	flag in disabled rows below the window.

	* frame.h (struct frame): New member updated_p.

	* xdisp.c (redisplay_internal): Mark updated frames in new updated_p
	member.  Remove local `updated' array and associated variables.

2005-09-07  Kim F. Storm  <storm@cua.dk>

	* xdisp.c (handle_display_prop): Respect overlay window property.

	* xdisp.c (try_window): Remove superfluous cursor_height calculation.
	Fixes crash reported by YAMAMOTO Mitsuharu.

2005-09-06  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macterm.c (struct xlfdpat_block, struct xlfdpat): New structs.
	(xlfdpat_destroy, xlfdpat_create, xlfdpat_exact_p)
	(xlfdpat_block_match_1, xlfdpat_match): New functions.
	(xlfdpat_block_match): New macro.
	(mac_to_x_fontname): Don't use tolower for non-ASCII characters.
	(x_font_name_to_mac_font_name): Set coding.dst_multibyte to 0.
	(add_font_name_table_entry): Increase font_name_table_size more
	rapidly.
	(mac_c_string_match): Remove function.
	(mac_do_list_fonts): Use XLFD pattern match instead of regular
	expression match.
